Massimo Reina Original Work

--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
+<!--
+  EYE FREE MODEL 3D BY Oscar creativo by OSCAR CREATIVO is licensed under Creative Commons Attribution.
+  Juvenile Teratophoneus curriei byrankinstudio is licensed under Creative Commons Attribution.
+-->
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>the Black Cube</title>
-</head>
-<body>
-    <h1>WORK IN PROGRESS</h1>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>The Black Cube</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>The Black Cube</h1>
+    </header>
+
+    <main>
+      <div id="container3D"></div>
+    </main>
+
+    <script type="module" src="js/main.js"></script>
+  </body>
 </html>
