--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Black Cube</title>
-    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
-      <h1>The Black Cube</h1>
-    </header>
 
-    <main>
-      <div id="container3D"></div>
-    </main>
-
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
