--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script async type="module" src="/module1.js"></script>
     <title>The Black Cube</title>
   </head>
   <body>
 
+    
     <script type="module" src="/main.js"></script>
   </body>
 </html>
