--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script async type="module" src="/module1.js"></script>
+    <link href="./css/style.css" rel="stylesheet" type="style">
+    <script async type="module" src="./js/module1.js"></script>
+    <!--<script async type="module" src="./js/text-module.js"></script>-->
     <title>The Black Cube</title>
   </head>
   <body>
 
-    
-    <script type="module" src="/main.js"></script>
+    <div id="room"></div>
+
+    <div id="text-container">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
+    </div>
+    <div id="app"></div>
+
+    <script type="module" src="./js/main.js"></script>
+    <!--<script type="module" src="./js/main2.js"></script>-->
   </body>
 </html>
