- cleaning index.html - optimizing css - (main.js) remove OrbitControls - (main.js) cleaning code

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
   </head>
   <body>
 
-    <div id="room"></div>
-
     <div id="text-container">
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
+      <div>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
+      </div>
     </div>
     <div id="app"></div>
 
