- Dev Animations - Implementing OOP (not in progress)

--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./css/style.css" rel="stylesheet" type="style">
-    <script async type="module" src="./js/module1.js"></script>
-    <!--<script async type="module" src="./js/text-module.js"></script>-->
     <title>The Black Cube</title>
   </head>
   <body>
 
-    <div id="text-container">
+  <!--   <div id="text-container">
       <div>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
@@ -22,10 +20,9 @@
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
       </div>
-    </div>
+    </div> -->
     <div id="app"></div>
 
-    <script type="module" src="./js/main.js"></script>
-    <!--<script type="module" src="./js/main2.js"></script>-->
+    <script type="module" src="./js/main-old.js"></script>
   </body>
 </html>
