--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-  <!--   <div id="text-container">
+    <div id="text-container">
       <div>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
@@ -20,8 +20,20 @@
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
       </div>
-    </div> -->
+    </div>
     <div id="app"></div>
+    <div id="web-socket">
+      <div>
+        <h4>Slider Output</h4>
+        <div id="sliderValue">slider value: 50</div>
+        <input type="range" id="slider" />
+      </div>
+      <div>
+        <h4>Csound Input</h4>
+        <div id="inputValue">input value: ?</div>
+      </div>
+
+    </div>
 
     <script type="module" src="./js/main-old.js"></script>
   </body>
