- clean index.html - CSS font import - CSS text-container - CSS white-screen / flash - Disable control settings - Implementing Keyboard EventListner - Test touch interactions

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>The Black Cube</title>
   </head>
   <body>
-
+    <div id="white-screen"></div>
     <div id="text-container">
       <div>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
