- Implementing readFile() func: -> post.php (reads txt file form server and gets its content) -> fetching  php raw data - update my gitignore

--- a/index.html
+++ b/index.html
@@ -8,21 +8,14 @@
     <title>The Black Cube</title>
   </head>
   <body>
+
     <div id="white-screen"></div>
     <div id="text-container">
       <div>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus modi magnam repudiandae obcaecati! At, alias officia ab natus earum minima necessitatibus ullam maiores harum unde corrupti ea commodi recusandae magni!
       </div>
     </div>
     <div id="app"></div>
-    <div id="web-socket">
+    <!-- <div id="web-socket">
       <div>
         <h4>Slider Output</h4>
         <div id="sliderValue">slider value: 50</div>
@@ -33,7 +26,7 @@
         <div id="inputValue">input value: ?</div>
       </div>
 
-    </div>
+    </div> -->
 
     <script type="module" src="./js/main-old.js"></script>
   </body>
