--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
 
     </div> -->
-    <audio id="myAudio" >
+    <audio id="myAudio" autoplay loop muted>
       <source src="audio/track.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
