- OOP INIT - FXSCENE INIT

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
       </div>
     </div> -->
     <!-- <script type="module" src="main.js"></script> -->
-    <script type="module" src="space.js"></script>
+    <!-- <script type="module" src="space.js"></script> -->
+    <script type="module" src="js/main.js"></script>
+    <!-- <script type="module" src="transition.js"></script> -->
   </body>
 </html>
