--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
-    />
+    /> -->
 
-    <link href="style.css" rel="stylesheet" type="style">
+    <link href="style.css" rel="stylesheet">
     <title>The Black Cube</title>
   </head>
-  <body>
+  <body class="relative">
 
-    <div id="text-container"></div>
-    <div id="app"></div>
+    <!-- <div id="text-container"></div> -->
     
     <!-- <div id="hideButton" class="d-flex flex-column p-3">
       <div class="text-center">
