--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <body class="relative">
 
 
+    <div id="app"></div>
 
     
     <div id="face-recognition" class="">
@@ -80,6 +81,7 @@
     <!-- <script type="module" src="main.js"></script> -->
     <!-- <script type="module" src="space.js"></script> -->
 
+    <!-- <script type="module" src="main.js"></script> -->
     <script type="module" src="js/main.js"></script>
     <!-- <script type="module" src="transition.js"></script> -->
   </body>
