--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
   <body class="relative">
 
 
-    <div id="app"></div>
+    <!-- <div id="app"></div> -->
+    <div id="text-container"></div>
 
     
-    <div id="face-recognition" class="">
+    <!-- <div id="face-recognition" class="">
       <h2>Demo: Webcam continuous face landmarks detection</h2>
       <p>Hold your face in front of your webcam to get real-time face landmarker detection.</br>Click <b>enable webcam</b> below and grant access to the webcam if prompted.</p>
       <div id="liveView" class="videoView">
@@ -40,7 +41,7 @@
       <div class="blend-shapes">
         <ul class="blend-shapes-list" id="video-blend-shapes"></ul>
       </div>
-    </div>
+    </div> -->
 
 
 
@@ -48,7 +49,6 @@
 
 
 
-    <!-- <div id="text-container"></div> -->
     
     <!-- <div id="hideButton" class="d-flex flex-column p-3">
       <div class="text-center">
@@ -81,8 +81,9 @@
     <!-- <script type="module" src="main.js"></script> -->
     <!-- <script type="module" src="space.js"></script> -->
 
+    <script type="module" src="test.js"></script>
     <!-- <script type="module" src="main.js"></script> -->
-    <script type="module" src="js/main.js"></script>
+    <!-- <script type="module" src="js/main.js"></script> -->
     <!-- <script type="module" src="transition.js"></script> -->
   </body>
 </html>
