Update and fix strobe action

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title>The Black Cube</title>
   </head>
   <body class="relative">
+    <div id="superDiv" class="hidden"></div>
     <!-- <div id="app"></div> -->
     <div id="text-container"></div>
 
