upt some div ids

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <title>The Black Cube</title>
   </head>
   <body class="relative">
-    <div id="superDiv" class="hidden"></div>
+    <div id="strobe_container" class="hidden"></div>
     <!-- <div id="app"></div> -->
-    <div id="text-container"></div>
+    <div id="text_container"></div>
 
     <!-- <div id="face-recognition" class="">
       <h2>Demo: Webcam continuous face landmarks detection</h2>
