--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     <title>The Black Cube</title>
   </head>
   <body class="relative">
+    <div id="app" class="flow-root"></div>
     <div id="strobe_container" class="hidden"></div>
     <div id="text_container"></div>
-    <!-- <div id="app"></div> -->
 
-    <!-- <div id="face-recognition" class="">
+    <div id="show_face" class=""></div>
+
+    <div id="face-recognition" class="flow-root">
       <h2>Demo: Webcam continuous face landmarks detection</h2>
       <p>Hold your face in front of your webcam to get real-time face landmarker detection.</br>Click <b>enable webcam</b> below and grant access to the webcam if prompted.</p>
       <div id="liveView" class="videoView">
@@ -36,7 +38,7 @@
       <div class="blend-shapes">
         <ul class="blend-shapes-list" id="video-blend-shapes"></ul>
       </div>
-    </div> -->
+    </div>
 
     <!-- <div id="hideButton" class="d-flex flex-column p-3">
       <div class="text-center">
