- Upt webAudio - Still working on presentation

--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
       </div>
     </div> -->
     <div id="hideButton_container">
+      <div class="cube_container">
+        <div class="cube">
+          <div class="face top">Top</div>
+          <div class="face bottom">Bottom</div>
+          <div class="face left">Left</div>
+          <div class="face right">Right</div>
+          <div class="face front">Front</div>
+          <div class="face back">Back</div>
+        </div>
+      </div>
       <button id="hideButton">START</button>
       
     </div>
