--- a/index.html
+++ b/index.html
@@ -66,19 +66,46 @@
         </p>
       </div>
     </div> -->
-    <div id="hideButton_container">
-      <div class="cube_container">
-        <div class="cube">
-          <div class="face top">Top</div>
-          <div class="face bottom">Bottom</div>
-          <div class="face left">Left</div>
-          <div class="face right">Right</div>
-          <div class="face front">Front</div>
-          <div class="face back">Back</div>
+    <div id="presentation_container">
+      <div id="cube_container">
+        <div id="cube">
+          <div class="face top"></div>
+          <div class="face bottom"></div>
+          <div class="face left"></div>
+          <div class="face right"></div>
+          <div class="face front"></div>
+          <div class="face back"></div>
+        </div>
+      </div>
+      <div id="presentation">
+        <div class="title">
+          <h1>WEB BOX</h1>
+        </div>
+        <div class="subtitle">
+          <h4>Surveillance and Manipulation in the Digital Age</h4>
+          <h4>
+            Trans-interactive installation for physical and web environments
+          </h4>
+        </div>
+        <div class="instructions_container">
+          <ul>
+            <li>Connect with the physical environment by zooming, scrolling
+              and exploring virtual space.</li>
+            <li>
+              Turn up the volume and activate the phone ringer for the
+          full experience.
+            </li>
+          </ul>          
+        </div>
+
+        <div class="names">
+          <p>
+            Lorenzo Ballerini <span>with</span>
+            Giuseppe Ernandez & Massimo Reina
+          </p>
         </div>
       </div>
       <button id="hideButton">START</button>
-      
     </div>
 
 
