--- a/index.html
+++ b/index.html
@@ -82,9 +82,10 @@
           <h1>WEB BOX</h1>
         </div>
         <div class="subtitle">
-          <h4>Surveillance and Manipulation in the Digital Age</h4>
-          <h4>
-            Trans-interactive installation for physical and web environments
+          <h4>Surveillance and Manipulation in the Digital Age 
+            <span class="block">
+              Trans-interactive installation for physical and web environments
+            </span>
           </h4>
         </div>
         <div class="instructions_container">
@@ -100,7 +101,7 @@
 
         <div class="names">
           <p>
-            Lorenzo Ballerini <span>with</span>
+            Lorenzo Ballerini <span class="block">with</span>
             Giuseppe Ernandez & Massimo Reina
           </p>
         </div>
