- First fixing features - 1 TEST

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
   <body class="relative">
     <div id="app" class="flow-root"></div>
     <div id="strobe_container" class="hidden"></div>
-    <div id="text_container"></div>
+    <div id="text_container">
+      <p class="x"><code></code></p>
+      <p class="y"><code></code></p>
+      <p class="z"><code></code></p>
+      <p class="zoom"><code></code></p>
+    </div>
 
     <div id="face-recognition" class="flow-root">
       <h2>Demo: Webcam continuous face landmarks detection</h2>
