code tags deleted

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div id="app" class="flow-root"></div>
     <div id="strobe_container" class="hidden"></div>
     <div id="text_container">
-      <p class="x"><code></code></p>
-      <p class="y"><code></code></p>
-      <p class="z"><code></code></p>
-      <p class="zoom"><code></code></p>
+      <p class="x"></p>
+      <p class="y"></p>
+      <p class="z"></p>
+      <p class="zoom"></p>
     </div>
 
     <div id="face-recognition" class="flow-root">
