--- a/tailwindcss.html
+++ b/tailwindcss.html
@@ -1,4 +1,44 @@
-<!-- 'from-black',
+<!-- 
+ 
+'!bottom-0'
+'!bottom-0.5'
+'!bottom-1'
+'!bottom-1.5'
+'!bottom-2'
+'!bottom-2.5'
+'!bottom-3'
+'!bottom-3.5'
+'!bottom-4'
+'!bottom-5'
+'!bottom-6'
+'!bottom-7'
+'!bottom-8'
+'!bottom-9'
+'!bottom-10'
+'!bottom-11'
+'!bottom-12'
+'!bottom-14'
+'!bottom-16'
+'!bottom-20'
+'!bottom-24'
+'!bottom-28'
+'!bottom-32'
+'!bottom-36'
+'!bottom-40'
+'!bottom-44'
+'!bottom-48'
+'!bottom-52'
+'!bottom-56'
+'!bottom-60'
+'!bottom-64'
+'!bottom-72'
+'!bottom-80'
+'!bottom-96'
+
+
+
+
+'from-black',
 'from-white',
 'from-slate-50',
 'from-slate-100',
